--- a/index.html
+++ b/index.html
@@ -37,6 +37,10 @@
     <main id="smooth-scroll-wrapper">
 
         <section id="hero" class="hero-section">
+            <div class="hero-visual-placeholder" aria-hidden="false">
+                <img src="./images/banner.webp" alt="Abstract visualization of data and code lines, representing creative software development.">
+            </div>
+
             <div class="container">
                 <h1 class="hero-headline">
                     We <span class="accent-text">Code</span> Beyond the Curve.
@@ -44,10 +48,7 @@
                 <p class="hero-subtext">JXCorp is not typical. We are the creative software forge of Jeremia Xavier, a band of developers building what others only dream of.</p>
                 <a href="#products" class="cta-button">Explore Our Creative Tech</a>
             </div>
-            <div class="hero-visual-placeholder" aria-hidden="true">
-                <img src="./images/banner.webp" alt="Abstract visualization of data and code lines, representing creative software development.">
-            </div>
-        </section>
+            </section>
 
         <section id="philosophy" class="content-section">
             <div class="container">
@@ -111,7 +112,7 @@
             <div class="container glassmorphism-card">
                 <h2>Ready to Build the <span class="accent-text">Future</span>?</h2>
                 <p>We're open to unique collaborations and new challenges. Let's create something non-typical together.</p>
-                <a href="mailto:hello@jxcorp.com" class="cta-button large-cta">Get in Touch</a>
+                <a href="mailto:jeremiaxavier@zohomail.in" class="cta-button large-cta">Get in Touch</a>
             </div>
         </section>
 
