--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <ul class="nav-list">
                     <li><a href="#philosophy" class="nav-link">Philosophy</a></li>
                     <li><a href="#products" class="nav-link">Software</a></li>
-                    <li><a href="#team" class="nav-link">Our Team</a></li>
+                    <li><a href="#team" class="nav-link">Team</a></li>
                     <li><a href="#contact" class="nav-link">Contact</a></li>
                 </ul>
             </nav>
