--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>JXCorp - Creative Software for the Future</title>
+    <title>JXCorp - Software for the Future</title>
     <meta name="description" content="JXCorp, the software division of Jeremia Xavier. We are a collective of developers building creative, non-typical software solutions.">
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap" rel="stylesheet">
@@ -45,7 +45,7 @@
                 <h1 class="hero-headline">
                     We <span class="accent-text">Code</span> Beyond the Curve.
                 </h1>
-                <p class="hero-subtext">JXCorp is not typical. We are the creative software forge of Jeremia Xavier, a band of developers building what others only dream of.</p>
+                <p class="hero-subtext">JXCorp is not typical. We are the creative software developers building what others only dream of.</p>
                 <a href="#products" class="cta-button">Explore Our Creative Tech</a>
             </div>
             </section>
@@ -70,7 +70,7 @@
             </div>
         </section>
 
-        <section id="products" class="content-section products-section">
+        <!-- <section id="products" class="content-section products-section">
             <div class="container">
                 <h2>Featured <span class="accent-text">Software</span></h2>
                 <div class="carousel-placeholder" role="region" aria-label="Featured Software Showcase">
@@ -82,7 +82,7 @@
                     </div>
                     </div>
             </div>
-        </section>
+        </section> -->
 
         <section id="team" class="content-section team-section">
             <div class="container">
@@ -90,12 +90,12 @@
                 <p class="section-description">A small, focused team of senior developers and visionary designers.</p>
                 <div class="team-grid">
                     <div class="team-member">
-                        <div class="team-photo-placeholder"></div>
+                        <div class="team-photo-placeholder"><img src="./images/jeremia.jpg" alt=""></div>
                         <h4>Jeremia Xavier</h4>
                         <p class="role">Developer-Lead</p>
                     </div>
                     <div class="team-member">
-                        <div class="team-photo-placeholder"></div>
+                        <div class="team-photo-placeholder"><img src="./images/abhinav.jpeg" alt=""></div>
                         <h4>Abhinav Sajeev</h4>
                         <p class="role">R&D</p>
                     </div>
